force-app/main/default/objects/OpportunityLineItem/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Product Cost Type</description>
    <formula>TEXT(PricebookEntry.Product2.Cost_Type__c)</formula>
    <inlineHelpText>Product Cost Type</inlineHelpText>
    <label>Cost Type</label>
    <type>Text</type>
</CustomField>