force-app/main/default/objects/OpportunityLineItem/fields/Installable_Product__c.field-meta.xml
<CustomField>
    <fullName>Installable_Product__c</fullName>
    <formula>PricebookEntry.Product2.Installation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installable Product</label>
    <type>Checkbox</type>
</CustomField>