force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Shows the Unique Opportunity Number this Item belongs to</description>
    <formula>Opportunity.Opportunity_Number__c</formula>
    <inlineHelpText>Shows the Unique Opportunity Number</inlineHelpText>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>