force-app/main/default/objects/OpportunityLineItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Indicates the Product Category
=&gt; Product Models = Main Products</description>
    <formula>TEXT(PricebookEntry.Product2.Product_Category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>