force-app/main/default/objects/OpportunityLineItem/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Product_Item__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Item</label>
    <type>Text</type>
</CustomField>