force-app/main/default/objects/OpportunityLineItem/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <description>Shows the RVN Number which is a concatenation of the two Unique Identifiers
1) Opportunity Number 8 digits
2) Visual Structure Number 8 Digits</description>
    <formula>Opportunity_Number__c +  Visual_Structure_Number__c</formula>
    <inlineHelpText>Shows the RVN Number</inlineHelpText>
    <label>RVN Number</label>
    <type>Text</type>
</CustomField>